[tool.poetry]
name = "gptuber-by-langchain"
version = "0.1.0"
description = ""
authors = ["izumis007 <izumis007@gmail.com>"]
readme = "README.md"
packages = [{include = "gptuber_by_langchain"}]

[tool.poetry.dependencies]
python = "^3.9"
emoji = "2.2.0"
google-search-results = "2.4.1"
mypy = "0.991"
numpy = "1.24.0"
openai = "0.25.0"
pandas = "1.5.2"
pydantic = "1.10.2"
requests = "2.28.1"
types-requests = "2.28.11.7"
websockets = "10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
